// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Edit draft]  Form data to edit draft 1`] = `
Object {
  "bccEmails": Array [
    "bccUser@jigl.com",
  ],
  "ccEmails": Array [
    "ccUser@jigl.com",
  ],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "Email subject 1",
  "toEmails": Array [
    "toUser@jigl.com",
  ],
}
`;

exports[`[Form outgoing email]  Form outgoing email from data 1`] = `
Object {
  "body": "<p></p>
",
  "data": Object {
    "email": Object {
      "content": "<p></p>
",
      "date": 1524861748481,
      "isMuted": false,
      "key": 1524861748481,
      "preview": "
",
      "secure": true,
      "status": 4,
      "subject": "Subject",
      "unread": false,
    },
    "labels": Array [
      6,
    ],
    "recipients": Object {
      "bcc": Array [
        "bccUser@jigl.com",
      ],
      "cc": Array [
        "ccUser@jigl.com",
      ],
      "from": Array [
        "julian@jigl.com",
      ],
      "to": Array [
        "toUser@jigl.com",
      ],
    },
  },
  "subject": "Subject",
  "to": Array [
    Object {
      "recipientId": "toUser",
      "type": "to",
    },
    Object {
      "recipientId": "ccUser",
      "type": "cc",
    },
    Object {
      "recipientId": "bccUser",
      "type": "bcc",
    },
  ],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to forward 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "FW: Email subject 1",
  "threadId": undefined,
  "toEmails": Array [],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply email 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    "fromUser@jigl.com",
  ],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply-all 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [
    "ccUser@jigl.com",
    "toUser@jigl.com",
  ],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    "fromUser@jigl.com",
  ],
}
`;
